# subexercise

./: .gitignore
exercise1/text/: Insight_of_Bitcoin_White_Paper.md
exercise3/: Cargo.toml  README.md
exercise3/src/: main.rs
exercise4/: Cargo.toml  README.md
exercise4/bins/: area.rs  sum.rs  trafficlights.rs
exercise4/src/: lib.rs
exercise4/src/area/: mod.rs
exercise4/src/sum/: mod.rs
exercise4/src/trafficlight/: mod.rs
exercise5/: README.md
exercise5/pallets/poe/src/: lib.rs
exercise6/: README.md
exercise6/frontend/: main.ts  package.json
