[package]
name = "exercise04"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "trafficlight"
path = "bins/trafficlights.rs"

[[bin]]
name = "sum"
path = "bins/sum.rs"

[[bin]]
name = "area"
path = "bins/area.rs"

[dependencies]
